Fixed Page Gap
Gap at right edge of page fixed.  Problem occurred when page was
horizontally resized to certain widths.

--- a/restaurant/app/assets/stylesheets/review.css.scss
+++ b/restaurant/app/assets/stylesheets/review.css.scss
@@ -181,7 +181,7 @@ navigation_flash_notice{
       float: bottom;
       width: 99%;
       text-align: center;
-      padding: 7px;
+      padding: 7px 0px;
       border-bottom: 1px;
       border-top: 1px;
       background-color: transparent; 
